deploy: bed1d676d90ce292f34530dd36182bfc6d4c0cf1

--- a/ch1/additional-topics/graphs-and-free-groups.html
+++ b/ch1/additional-topics/graphs-and-free-groups.html
@@ -484,9 +484,8 @@ section and the next give some illustrations of this principle, mainly using cov
 space theory.</p>
 <p><span style="margin-left: 2em"> We remind the reader that the Additional Topics which form the remainder of
 this chapter are not to be regarded as an essential part of the basic core of the book.
-Readers who are eager to move on to new topics should feel free to skip ahead.
-|
-<span style="margin-left: 2em"> By definition, a <strong>graph</strong> is a <span class="math notranslate nohighlight">\(1\)</span>-dimensional CW complex, in other words, a space
+Readers who are eager to move on to new topics should feel free to skip ahead.</p>
+<p><span style="margin-left: 2em"> By definition, a <strong>graph</strong> is a <span class="math notranslate nohighlight">\(1\)</span>-dimensional CW complex, in other words, a space
 <span class="math notranslate nohighlight">\(X\)</span> obtained from a discrete set <span class="math notranslate nohighlight">\(X^0\)</span> by attaching a collection of <span class="math notranslate nohighlight">\(1\)</span>-cells <span class="math notranslate nohighlight">\(e_\alpha\)</span>. Thus <span class="math notranslate nohighlight">\(X\)</span>
 is obtained from the disjoint union of <span class="math notranslate nohighlight">\(X^0\)</span> with closed intervals <span class="math notranslate nohighlight">\(I_\alpha\)</span> by identifying the
 two endpoints of each <span class="math notranslate nohighlight">\(I_\alpha\)</span> with points of <span class="math notranslate nohighlight">\(X^0\)</span>. The points of <span class="math notranslate nohighlight">\(X^0\)</span> are the <strong>vertices</strong> and
@@ -515,7 +514,7 @@ meets each <span class="math notranslate nohighlight">\(\bar{e}_\alpha\)</span> 
 has the discrete topology. But <span class="math notranslate nohighlight">\(D\)</span> is compact, being a closed subset of the compact
 space <span class="math notranslate nohighlight">\(C\)</span>, so <span class="math notranslate nohighlight">\(D\)</span> must be finite. By the definition of <span class="math notranslate nohighlight">\(D\)</span> this means that <span class="math notranslate nohighlight">\(C\)</span> can meet only
 finitely many vertices and edges.</p>
-<p><span style="margin-left: 2em"> A <strong>subgraph</strong> of a graph <span class="math notranslate nohighlight">\(X\)</span> is a subspace <span class="math notranslate nohighlight">\(Y \subsetX\)</span> that is a union of vertices and
+<p><span style="margin-left: 2em"> A <strong>subgraph</strong> of a graph <span class="math notranslate nohighlight">\(X\)</span> is a subspace <span class="math notranslate nohighlight">\(Y \subset X\)</span> that is a union of vertices and
 edges of <span class="math notranslate nohighlight">\(X\)</span>, such that <span class="math notranslate nohighlight">\(e_\alpha \subset Y\)</span> implies <span class="math notranslate nohighlight">\(\bar{e}_\alpha \subset Y\)</span>. The latter condition just says that
 <span class="math notranslate nohighlight">\(Y\)</span> is a closed subspace of <span class="math notranslate nohighlight">\(X\)</span>. A tree is a contractible graph. By a tree in a graph <span class="math notranslate nohighlight">\(X\)</span>
 we mean a subgraph that is a tree. We call a tree in <span class="math notranslate nohighlight">\(X\)</span> <strong>maximal</strong> if it contains all the
