--- a/ch1/additional-topics/k-g-1-spaces-and-graphs-of-groups.html
+++ b/ch1/additional-topics/k-g-1-spaces-and-graphs-of-groups.html
@@ -487,7 +487,7 @@ in its interactions with group theory.</p>
 are called Eilenberg-MacLane spaces, though in the case <span class="math notranslate nohighlight">\(n=1\)</span> they were studied by
 Hurewicz before Eilenberg and MacLane took up the general case. Here are some examples:</p>
 <p id="example-1b-1"><strong>Example 1B.1.</strong> <span class="math notranslate nohighlight">\(S^1\)</span> is a <span class="math notranslate nohighlight">\(K(\mathbb{Z}, 1)\)</span>. More generally, a connected graph is a <span class="math notranslate nohighlight">\(K(G,1)\)</span> with
-<span class="math notranslate nohighlight">\(G\)</span> a free group, since by the results of <span class="math notranslate nohighlight">\(§1.A &lt;Section 1.A&gt;\)</span> its universal cover is a tree, hence contractible.</p>
+<span class="math notranslate nohighlight">\(G\)</span> a free group, since by the results of <a class="hxr-hoverxref hxr-tooltip reference internal" href="graphs-and-free-groups.html#section-1-a"><span class="std std-ref">§1.A</span></a> its universal cover is a tree, hence contractible.</p>
 <p id="example-1b-2"><strong>Example 1B.2.</strong> Closed surfaces with infinite <span class="math notranslate nohighlight">\(\pi_1\)</span>, in other words, closed surfaces other
 than <span class="math notranslate nohighlight">\(S^2\)</span> and <span class="math notranslate nohighlight">\(\mathbb{R}P^2\)</span>, are <span class="math notranslate nohighlight">\(K(G,1)\)</span>’s. This will be shown in <span class="xref std std-ref">Example 1B.14</span> below. It also
 follows from the theorem in surface theory that the only simply-connected surfaces
@@ -521,7 +521,7 @@ that the universal cover of <span class="math notranslate nohighlight">\(S^3-K\)
 <span class="math notranslate nohighlight">\(X_{m,n}\)</span>, hence is also contractible.</p>
 <div class="docutils container" id="example-1b-7">
 <p><strong>Example 1B.7.</strong> It is not hard to construct a <span class="math notranslate nohighlight">\(K(G,1)\)</span> for an arbitrary group <span class="math notranslate nohighlight">\(G\)</span>, using
-the notion of a <span class="math notranslate nohighlight">\(\delta -complex\)</span> defined in <span class="xref std std-ref">§2.1</span>. Let <span class="math notranslate nohighlight">\(EG\)</span> be the <span class="math notranslate nohighlight">\(\delta\)</span>-complex whose
+the notion of a <span class="math notranslate nohighlight">\(\Delta -complex\)</span> defined in <span class="xref std std-ref">§2.1</span>. Let <span class="math notranslate nohighlight">\(EG\)</span> be the <span class="math notranslate nohighlight">\(\Delta\)</span>-complex whose
 <span class="math notranslate nohighlight">\(n\)</span>-simplices are the ordered <span class="math notranslate nohighlight">\((n+1)\)</span>-tuples <span class="math notranslate nohighlight">\([g_0,\cdots,g_n]\)</span> of elements of <span class="math notranslate nohighlight">\(G\)</span>. Such an
 <span class="math notranslate nohighlight">\(n\)</span>-simplex attaches to the <span class="math notranslate nohighlight">\((n-1)\)</span>-simplices <span class="math notranslate nohighlight">\([g_0,\cdots, \hat{g}_i,\cdots,g_n]\)</span> in the obvious way,
 just as a standard simplex attaches to its faces. (The notation <span class="math notranslate nohighlight">\(\hat{g}_i\)</span> means that this
@@ -589,11 +589,10 @@ every homomorphism</em> <span class="math notranslate nohighlight">\(\pi_1(X,x_0
 isomorphic fundamental groups. The proposition gives maps <span class="math notranslate nohighlight">\(f:(X,x_0) \rightarrow (Y,y_0)\)</span> and
 <span class="math notranslate nohighlight">\(g:(Y,y_0) \rightarrow (X,x_0)\)</span> inducing inverse isomorphisms <span class="math notranslate nohighlight">\(\pi_1(X,x_0) \approx \pi_1(Y,y_0)\)</span>. Then <span class="math notranslate nohighlight">\(fg\)</span>
 and <span class="math notranslate nohighlight">\(gf\)</span> induce the identity on <span class="math notranslate nohighlight">\(\pi_1\)</span> and hence are homotopic to the identity maps.</p>
+<a class="reference internal image-reference" href="../../_images/prop-1B-9.png"><img alt="../../_images/prop-1B-9.png" class="align-right" src="../../_images/prop-1B-9.png" style="width: 30%;" /></a>
 <p><strong>Proof of 1B.9:</strong> Let us first consider the case that <span class="math notranslate nohighlight">\(X\)</span> has a single <span class="math notranslate nohighlight">\(0\)</span>-cell, the basepoint
 <span class="math notranslate nohighlight">\(x_0\)</span>. Given a homomorphism <span class="math notranslate nohighlight">\(\varphi: \pi_1(X,x_0) \rightarrow \pi_1(Y,y_0)\)</span>, we begin the construction
-of a map <span class="math notranslate nohighlight">\(f:(X,x_0) \rightarrow (Y,y_0)\)</span> with <span class="math notranslate nohighlight">\(f_* = \varphi\)</span> by setting <span class="math notranslate nohighlight">\(f(x_0)=y_0\)</span>.</p>
-<a class="reference internal image-reference" href="../../_images/prop-1B-9.png"><img alt="../../_images/prop-1B-9.png" class="align-right" src="../../_images/prop-1B-9.png" style="width: 30%;" /></a>
-<p>Each <span class="math notranslate nohighlight">\(1\)</span>-cell
+of a map <span class="math notranslate nohighlight">\(f:(X,x_0) \rightarrow (Y,y_0)\)</span> with <span class="math notranslate nohighlight">\(f_* = \varphi\)</span> by setting <span class="math notranslate nohighlight">\(f(x_0)=y_0\)</span>. Each <span class="math notranslate nohighlight">\(1\)</span>-cell
 <span class="math notranslate nohighlight">\(e^1_\alpha\)</span> of <span class="math notranslate nohighlight">\(X\)</span> has closure a circle determining an element
 <span class="math notranslate nohighlight">\([e^1_\alpha]\in \pi_1(X,x_0)\)</span>, and we let <span class="math notranslate nohighlight">\(f\)</span> on the closure of <span class="math notranslate nohighlight">\(e^1_\alpha\)</span>
 be a map representing <span class="math notranslate nohighlight">\(\varphi([e^1_\alpha])\)</span>. If <span class="math notranslate nohighlight">\(i:X^1 \hookrightarrow X\)</span> denotes
@@ -641,7 +640,53 @@ describe a procedure for assembling a collection of <span class="math notranslat
 for a larger group <span class="math notranslate nohighlight">\(G\)</span>. Group-theoretically, this gives a method for assembling smaller
 groups together to form a larger group, generalizing the notion of free products.</p>
 <p><span style="margin-left: 2em"> Let <span class="math notranslate nohighlight">\(\Gamma\)</span> be a graph that is connected and oriented, that is, its edges are viewed as
-arrows, each edge having a specified direction. Suppose that at each vertex <span class="math notranslate nohighlight">\(v\)</span> of <span class="math notranslate nohighlight">\(\Gamma\)</span> we</p>
+arrows, each edge having a specified direction. Suppose that at each vertex <span class="math notranslate nohighlight">\(v\)</span> of <span class="math notranslate nohighlight">\(\Gamma\)</span> we
+place a group <span class="math notranslate nohighlight">\(G_v\)</span> and along each edge <span class="math notranslate nohighlight">\(e\)</span> of <span class="math notranslate nohighlight">\(\Gamma\)</span> we put a homomorphism <span class="math notranslate nohighlight">\(\varphi_e\)</span> from the
+group at the tail of the edge to the group at the head of the edge. We call this data a
+<strong>graph of groups</strong>. Now build a space <span class="math notranslate nohighlight">\(B\Gamm\)</span> by putting the space <a href="#id1"><span class="problematic" id="id2">:maht:`BG_v`</span></a> from <a class="hxr-hoverxref hxr-tooltip reference internal" href="#example-1b-7"><span class="std std-ref">Example 1B.7</span></a>
+at each vertex <span class="math notranslate nohighlight">\(v\)</span> of <span class="math notranslate nohighlight">\(\Gamma\)</span> and then filling in a mapping cylinder of the map <span class="math notranslate nohighlight">\(B\varphi_e\)</span> along
+each edge <span class="math notranslate nohighlight">\(e\)</span> of <span class="math notranslate nohighlight">\(\Gamma\)</span>, identifying the two ends of the mapping cylinder with the two <span class="math notranslate nohighlight">\(BG_v\)</span>’s
+at the ends of <span class="math notranslate nohighlight">\(e\)</span>. The resulting space <span class="math notranslate nohighlight">\(B\Gamma\)</span> is then a CW complex since the maps <span class="math notranslate nohighlight">\(B\varphi_e\)</span>
+take <span class="math notranslate nohighlight">\(n\)</span>-cells homeomorphically onto <span class="math notranslate nohighlight">\(n\)</span>-cells. In fact, the cell structure on <span class="math notranslate nohighlight">\(B\Gamma\)</span> can be
+canonically subdivided into a <span class="math notranslate nohighlight">\(\Delta-complex\)</span> structure using the prism construction from
+the proof of <span class="xref std std-ref">Theorem 2.10</span>, but we will not need to do this here.</p>
+<p><span style="margin-left: 2em"> More generally, instead of <span class="math notranslate nohighlight">\(BG_v\)</span> one could take any CW complex <span class="math notranslate nohighlight">\(K(G_v,1)\)</span> at the
+vertex <span class="math notranslate nohighlight">\(v\)</span>, and then along edges put mapping cylinders of maps realizing the homomorphisms
+<span class="math notranslate nohighlight">\(\varphi_e\)</span>. We leave it for the reader to check that the resulting space <span class="math notranslate nohighlight">\(K\Gamma\)</span> is
+homotopy equivalent to the <span class="math notranslate nohighlight">\(B\Gamma\)</span> constructed above.</p>
+<p id="example-1b-10"><strong>Example 1B.10.</strong> Suppose <span class="math notranslate nohighlight">\(\Gamma\)</span> consists of one central vertex with a number of edges
+radiating out from it, and the group <span class="math notranslate nohighlight">\(G_v\)</span> at this central vertex is trivial, hence also all
+the edge homomorphisms. Then <a class="hxr-hoverxref hxr-tooltip reference internal" href="../sec2/the-van-kampen-theorem.html#theorem-1-20"><span class="std std-ref">van Kampen’s theorem</span></a> implies that <span class="math notranslate nohighlight">\(\pi_1(K\Gamma)\)</span> is the
+free product of the groups at all the outer vertices.</p>
+<p><span style="margin-left: 2em"> In view of this example, we shall call <span class="math notranslate nohighlight">\(\pi_1(K\Gamma)\)</span> for a general graph of groups <span class="math notranslate nohighlight">\(\Gamma\)</span> the
+<strong>graph product</strong> of the vertex groups <span class="math notranslate nohighlight">\(G_v\)</span> with respect to the edge homomorphisms <span class="math notranslate nohighlight">\(\varphi_e\)</span>.
+The name for <span class="math notranslate nohighlight">\(\pi_1(K\Gamma)\)</span> that is generally used in the literature is the rather awkward
+phrase, ‘the fundamental group of the graph of groups’.</p>
+<p><span style="margin-left: 2em"> Here is the main result we shall prove about graphs of groups:</p>
+<p><span style="margin-left: 2em"> Before giving the proof, let us look at some interesting special cases:</p>
+<div class="docutils container" id="example-1b-12">
+<p><strong>Example 1B.12: Free products with Amalgamation.</strong> Suppose the graph of groups is
+<span class="math notranslate nohighlight">\(A \leftarrow C \rightarrow B\)</span>, with the two maps monomorphisms. One can regard this data as a specifying
+embeddings of <span class="math notranslate nohighlight">\(C\)</span> as subgroups of <span class="math notranslate nohighlight">\(A\)</span> and <span class="math notranslate nohighlight">\(B\)</span>. Applying <a class="hxr-hoverxref hxr-tooltip reference internal" href="../sec2/the-van-kampen-theorem.html#theorem-1-20"><span class="std std-ref">van Kampen’s theorem</span></a>
+to the decomposition of <span class="math notranslate nohighlight">\(K\Gamma\)</span> into its two mapping cylidners, we see that <span class="math notranslate nohighlight">\(\pi_1(K\Gamma)\)</span> is
+the quotient of <span class="math notranslate nohighlight">\(A{\Large *}B\)</span> obtained by identifying the subgroup <span class="math notranslate nohighlight">\(C \subset A\)</span> with the subgroup
+<span class="math notranslate nohighlight">\(C \subset B\)</span>. The standard notation for this group is <span class="math notranslate nohighlight">\(A{\Large *}_C B\)</span>, the free product of <span class="math notranslate nohighlight">\(A\)</span> and
+<span class="math notranslate nohighlight">\(B\)</span> <strong>amalgamated</strong> along the subgroup <span class="math notranslate nohighlight">\(C\)</span>. According to the theorem, <span class="math notranslate nohighlight">\(A {\Large *}_C B\)</span> contains
+both <span class="math notranslate nohighlight">\(A\)</span> and <span class="math notranslate nohighlight">\(B\)</span> as subgroups.</p>
+<p><span style="margin-left: 2em"> For example, a free product with amalgamation <span class="math notranslate nohighlight">\(\mathbb{Z} {\Large *}_\mathbb{Z} \mathbb{Z}\)</span> can be realized by
+mapping cylinders of the maps <span class="math notranslate nohighlight">\(S^1 \leftarrow S^1 \rightarrow S^1\)</span> that are <span class="math notranslate nohighlight">\(m\)</span>-sheeted and <span class="math notranslate nohighlight">\(n\)</span>-sheeted covering
+spaces, respectively. We studied this case in <span class="xref std std-ref">Examples 1.24</span> and <span class="xref std std-ref">1.35</span> where we showed
+that the complex <span class="math notranslate nohighlight">\(K\Gamma\)</span> is a deformation retract of the complement of a torus knot in
+<span class="math notranslate nohighlight">\(S^3\)</span> if <span class="math notranslate nohighlight">\(m\)</span> and <span class="math notranslate nohighlight">\(n\)</span> are relatively prime. It is a basic result in <span class="math notranslate nohighlight">\(3\)</span>-manifold theory that the
+complement of every smooth knot in <span class="math notranslate nohighlight">\(S^3\)</span> can be built up by iterated graph of groups
+constructions with injective edge homomorphisms, starting with free groups, so the
+theorem implies that these knot complements are <span class="math notranslate nohighlight">\(K(G,1)\)</span>’s. Their universal covers
+are all <span class="math notranslate nohighlight">\(\mathbb{R}^3\)</span>, in fact.</p>
+</div>
+<div class="docutils container" id="example-1b-13">
+<p><strong>Example 1B.13: HNN Extensions.</strong> Consider a graph of groups <span class="math notranslate nohighlight">\(C \mathrel{\substack {\varphi \\ \longrightarrow\\ \longrightarrow\\ \psi}} A\)</span> with <span class="math notranslate nohighlight">\(\varphi\)</span>
+and <span class="math notranslate nohighlight">\(\psi\)</span> both monomorphisms.</p>
+</div>
 </section>
 </section>
 
