--- a/ch1/sec2/exercises.html
+++ b/ch1/sec2/exercises.html
@@ -522,7 +522,7 @@ self-intersection of <span class="math notranslate nohighlight">\(X\)</span>, pr
 <span class="math notranslate nohighlight">\(\pi_1(Y)\)</span> has the presentation <span class="math notranslate nohighlight">\(\langle a,b,c | aba^{-1}b^{-1}cb^\epsilon c^{-1} \rangle\)</span> for <span class="math notranslate nohighlight">\(\epsilon = \pm 1\)</span>. (Changing the
 sign of <span class="math notranslate nohighlight">\(\epsilon\)</span> gives an isomorphic group, as it happens.) Show also that <span class="math notranslate nohighlight">\(\pi_1(y)\)</span> is isomorphic
 to <span class="math notranslate nohighlight">\(\pi_1(\mathbb{R}^3 - Z)\)</span> for <span class="math notranslate nohighlight">\(Z\)</span> the graph shown in the figure. The groups <span class="math notranslate nohighlight">\(\pi_1(X)\)</span> and <span class="math notranslate nohighlight">\(\pi_1(y)\)</span>
-are not isomorphic, but this is not easy to prove; see the discussion in <span class="xref std std-ref">Example 1B.13</span>.</p>
+are not isomorphic, but this is not easy to prove; see the discussion in <a class="hxr-hoverxref hxr-tooltip reference internal" href="../additional-topics/k-g-1-spaces-and-graphs-of-groups.html#example-1b-13"><span class="std std-ref">Example 1B.13</span></a>.</p>
 </div>
 <p id="exercise-1-2-13"><strong>13.</strong> The space <span class="math notranslate nohighlight">\(Y\)</span> in the preceding exercise can be obtained from a disk with two holes
 by identifying its three boundary circles. There are only two essentially different ways
