--- a/ch2/sec1/delta-complexes.html
+++ b/ch2/sec1/delta-complexes.html
@@ -513,11 +513,62 @@ also determines a canonical linear homeomorphism from the standard <span class="
 remaining <span class="math notranslate nohighlight">\(n\)</span> vertices span an <span class="math notranslate nohighlight">\((n-1)\)</span>-simplex, called a <strong>face</strong> of <span class="math notranslate nohighlight">\([v_0,\cdots,v_n]\)</span>. We
 adopt the following convention:</p>
 <blockquote>
-<div><p><a href="#id1"><span class="problematic" id="id2">**</span></a>The vertices of a face, or of any subsimplex spanned by a subset of the vertices,
-will always be ordered according to their order in the larger simplex.</p>
+<div><p><em>The vertices of a face, or of any subsimplex spanned by a subset of the vertices,
+will always be ordered according to their order in the larger simplex.</em></p>
 </div></blockquote>
 <p>The union of all the faces of <span class="math notranslate nohighlight">\(\Delta^n\)</span> is the <strong>boundary</strong> of <span class="math notranslate nohighlight">\(\Delta^n\)</span>, written <span class="math notranslate nohighlight">\(\partial \Delta^n\)</span>. The <strong>open
-simplex</strong></p>
+simplex</strong> <span class="math notranslate nohighlight">\(\mathring{\Delta}^n\)</span> is <span class="math notranslate nohighlight">\(\Delta^n-\partial \Delta^n\)</span>, the interior of <span class="math notranslate nohighlight">\(\Delta^n\)</span>.</p>
+<p><span style="margin-left: 2em"> A <span class="math notranslate nohighlight">\(\mathbf{\Delta}\)</span>-<strong>complex</strong> structure on a space <span class="math notranslate nohighlight">\(X\)</span> is a collection of maps <span class="math notranslate nohighlight">\(\sigam_\alpha:\Delta^n \rightarrow X\)</span>, with <span class="math notranslate nohighlight">\(n\)</span>
+depending on the index <span class="math notranslate nohighlight">\(\alpha\)</span>, such that:</p>
+<ol class="lowerroman simple" id="delta-complex-condition-i">
+<li><p>The restriction <span class="math notranslate nohighlight">\(\sigma_\alpha\mid\mathring{\Delta}^n\)</span> is injective, and each point of <a href="#id1"><span class="problematic" id="id2">:maht:`X`</span></a> is in the image of exactly
+one such restriction <span class="math notranslate nohighlight">\(\sigma_\alpha\mid\mathring{\Delta}^n\)</span>.</p></li>
+</ol>
+<ol class="lowerroman simple" id="delta-complex-condition-ii" start="2">
+<li><p>Each restriction of <span class="math notranslate nohighlight">\(\sigma_\alpha\)</span> to a face of <span class="math notranslate nohighlight">\(\Delta^n\)</span> is one of the maps <span class="math notranslate nohighlight">\(\sigma_\beta:\Delta^{n-1}\rightarrow X\)</span>. Here we
+are identifying of <span class="math notranslate nohighlight">\(\sigma_\alpha\)</span> to a face of <span class="math notranslate nohighlight">\(\Delta^n\)</span> is one of the maps <span class="math notranslate nohighlight">\(\sigma_\beta:\Delta^{n-1}\rightarrow X\)</span>. Here we
+are identifying the face of <span class="math notranslate nohighlight">\(\Delta^n\)</span> with <span class="math notranslate nohighlight">\(\Delta^{n-1}\)</span> by the canonical linear homeomorphism
+between them that preserves the ordering of the vertices.</p></li>
+</ol>
+<ol class="lowerroman simple" id="delta-complex-condition-iii" start="3">
+<li><p>A set <span class="math notranslate nohighlight">\(A\subset X\)</span> is open iff <span class="math notranslate nohighlight">\(\sigma^{-1}_\alpha (A)\)</span> is open in <span class="math notranslate nohighlight">\(\Delta^n\)</span> for each <span class="math notranslate nohighlight">\(\sigma_\alpha\)</span>.</p></li>
+</ol>
+<p>Among other things, this last condition rules out trivialities like regarding all the
+points of <span class="math notranslate nohighlight">\(X\)</span> as individual vertices. The earlier decompositions of the torus, projective
+plane, and Klein bottle into two triangles, three edges, and one or two vertices define
+<span class="math notranslate nohighlight">\(\Delta\)</span>-complex structures with a total of six <span class="math notranslate nohighlight">\(\sigma_\alpha\)</span>’s for the torus and Klein bottle and seven
+for the projective plane. The orientations on the edges in the pictures are compatible
+with a unique ordering of the vertices of each simplex, and these orderings determine
+the maps <span class="math notranslate nohighlight">\(\sigma_\alpha\)</span>.</p>
+<p><a href="#id3"><span class="problematic" id="id4">|</span></a>indent|A consequence of <a class="hxr-hoverxref hxr-tooltip reference internal" href="#delta-complex-condition-iii"><span class="std std-ref">(iii)</span></a> is that <span class="math notranslate nohighlight">\(X\)</span> can be built as a quotient space of a collection
+of disjoint simplices <span class="math notranslate nohighlight">\(\Delta^n_\alpha\)</span>, one for each <span class="math notranslate nohighlight">\(\sigma_\alpha:\Delta^n \rightarrow X\)</span>, the quotient space obtained by
+identifying each face of a <span class="math notranslate nohighlight">\(\Delta^n_\alpha\)</span> with the <span class="math notranslate nohighlight">\(\Delta^{n-1}_\beta\)</span> corresponding to the restriction <span class="math notranslate nohighlight">\(\sigma_\beta\)</span> of
+<span class="math notranslate nohighlight">\(\sigma_\alpha\)</span> to the face in question, as in condition <a class="hxr-hoverxref hxr-tooltip reference internal" href="#delta-complex-condition-ii"><span class="std std-ref">(ii)</span></a>. One can think of building the quotient
+space inductively, starting with a discrete set of vertices, then attaching edges to
+tehse to produce a graph, then attaching <span class="math notranslate nohighlight">\(2\)</span>-simplices to the graph, and so on. From
+this viewpoint we see that the data specifying a <span class="math notranslate nohighlight">\(\Delta\)</span>-complex can be described purely
+combinatorially as collections of <span class="math notranslate nohighlight">\(n\)</span>-simplices <span class="math notranslate nohighlight">\(\Delta^n_\alpha\)</span> for each <span class="math notranslate nohighlight">\(n\)</span> together wit hfunctions
+associating to each face of each <span class="math notranslate nohighlight">\(n\)</span>-ximples <span class="math notranslate nohighlight">\(\Delta^n_\alpha\)</span> an (<span class="math notranslate nohighlight">\(n-1\)</span>)-simplex <span class="math notranslate nohighlight">\(\Delta^{n-1}_\beta\)</span>.</p>
+<p><span style="margin-left: 2em"> More generally, <span class="math notranslate nohighlight">\(\Delta\)</span>-complexes can be built from collections of disjoint simplices by
+identifying various subsimplices spanned by subsets of the vertices, where the identifications
+are performed using the canonical linear homeomorphisms that preserve
+the orderings of the vertices. The earlier <span class="math notranslate nohighlight">\(\Delta\)</span>-complex structures on a torus, projective
+plane, or Klein bottle can be obtained in this way, by identifying pairs of edges of
+two <span class="math notranslate nohighlight">\(2\)</span>-simplices. If one starts with a single <span class="math notranslate nohighlight">\(2\)</span>-simplex and identifies all three edges
+to a single edge, preserving the orientations given by the ordering of the vertices,
+this produces a <span class="math notranslate nohighlight">\(\Delta\)</span>-complex known as the ‘dunce hat’. By contrast, if the three edges
+of a <span class="math notranslate nohighlight">\(2\)</span>-simplex are identified preserving a cyclic orientation of the three edges, as in
+the first figure at the right, this does not produce a
+<span class="math notranslate nohighlight">\(\Delta\)</span>-compelx structure, although if the <span class="math notranslate nohighlight">\(2\)</span>-simplex is
+subdivided into three smaller <span class="math notranslate nohighlight">\(2\)</span>-simplices about a
+central vertex, then one does obtain a <span class="math notranslate nohighlight">\(\Delta\)</span>-complex
+structure on the quotient space.</p>
+<p><span style="margin-left: 2em"> Thinking of a <span class="math notranslate nohighlight">\(\Delta\)</span>-complex <span class="math notranslate nohighlight">\(X\)</span> as a quotient space of a collection of disjoint simplices,
+it is not hard to see that <span class="math notranslate nohighlight">\(X\)</span> must be a Hausdorff space. <a class="hxr-hoverxref hxr-tooltip reference internal" href="#delta-complex-condition-iii"><span class="std std-ref">Condition (iii)</span></a> then
+implies that each restriction <span class="math notranslate nohighlight">\(\sigma_\alpha \mid \mathring{\Delta}^n\)</span> is a homeomorphism onto its image, which is
+thus an open simplex in <span class="math notranslate nohighlight">\(X\)</span>. It follows from <span class="xref std std-ref">Proposition A.2</span> in the Appendix that
+these open simplicies <span class="math notranslate nohighlight">\(\sigma_\alpha(\mathring{\Delta}^n)\)</span> are the cells <span class="math notranslate nohighlight">\(e^n_\alpha\)</span> of a CW complex structure on <span class="math notranslate nohighlight">\(X\)</span> with
+the <span class="math notranslate nohighlight">\(\sigma_\alpha\)</span>’s as characteristic maps. We will not need this fact at present, however.</p>
 </section>
 
 
